--- a/overview/index.html
+++ b/overview/index.html
@@ -253,16 +253,16 @@ namespace di = boost::di;
 <td>Current version of Boost.DI (ex. 1'0'0)</td>
 </tr>
 <tr>
-<td><a href="../user_guide/index.html#di_config"><code>BOOST_DI_CFG</code></a></td>
-<td>Global configuration allows to customize provider and policies</td>
+<td><code>BOOST_DI_CFG</code></td>
+<td>Global configuration allows to customize provider and policies (See <a href="../user_guide/index.html#di_config">Config</a>)</td>
 </tr>
 <tr>
 <td><code>BOOST_DI_CFG_DIAGNOSTICS_LEVEL</code></td>
-<td>Gives more information with error messages</td>
+<td>Gives more information with error messages (See <a href="#error-messages">Error messages</a>)</td>
 </tr>
 <tr>
 <td><code>BOOST_DI_CFG_CTOR_LIMIT_SIZE</code></td>
-<td>Limits number of allowed consturctor parameters [0-10, default=10]</td>
+<td>Limits number of allowed consturctor parameters [0-10, default=10] (See <a href="../user_guide/index.html#injections">Injections</a>)</td>
 </tr>
 <tr>
 <td><code>BOOST_DI_NAMESPACE_BEGIN</code></td>
