--- a/overview/index.html
+++ b/overview/index.html
@@ -548,20 +548,24 @@ struct core::injector : TBindings... {
 <tr>
 <th>Library</th>
 <th>Bind Interface</th>
+<th>ASM x86-64</th>
 </tr>
 </thead>
 <tbody>
 <tr>
 <td>Boost.DI</td>
 <td><img alt="CPP" src="https://raw.githubusercontent.com/boost-experimental/di/cpp14/benchmark/bind_interface/di.cpp" /></td>
+<td><a href="https://raw.githubusercontent.com/boost-experimental/di/cpp14/benchmark/bind_interface/di.cpp">8 instructions</a></td>
 </tr>
 <tr>
 <td><a href="https://bitbucket.org/cheez/dicpp/wiki/Home">dicpp</a></td>
 <td><img alt="CPP" src="https://raw.githubusercontent.com/boost-experimental/di/cpp14/benchmark/bind_interface/dicpp.cpp" /></td>
+<td><a href="https://raw.githubusercontent.com/boost-experimental/di/cpp14/benchmark/bind_interface/dicpp.cpp">50 instructions</a></td>
 </tr>
 <tr>
 <td><a href="https://github.com/google/fruit">Google.Fruit</a></td>
 <td><img alt="CPP" src="https://raw.githubusercontent.com/boost-experimental/di/cpp14/benchmark/bind_interface/fruit.cpp" /></td>
+<td><a href="https://raw.githubusercontent.com/boost-experimental/di/cpp14/benchmark/bind_interface/dicpp.cpp">82 instructions</a></td>
 </tr>
 </tbody>
 </table>
