--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@ but also can help you with...</p>
 <h3 id="why-boostdi">Why Boost.DI?</h3>
 <ul>
 <li>Boost.DI has none or minimal run-time overhead (See <a href="overview/index.html#performance">Performance</a>)</li>
-<li>Boost.DI compiles fast (See <a href="overview/index.html#performance">Performance</a>)</li>
+<li>Boost.DI compiles fast (See <a href="overview/index.html#benchmarks">Benchmarks</a>)</li>
 <li>Boost.DI gives short diagnostic messages (See <a href="overview/index.html#error-messages">Error messages</a>)</li>
 <li>Boost.DI is non-intrusive (See <a href="user_guide/index.html#injections">Injections</a>)</li>
 <li>Boost.DI reduces boilerplate code (See <a href="tutorial/index.html#1-basic-create-objects-tree">Create Objects Tree</a>)</li>
@@ -319,7 +319,7 @@ but also can help you with...</p>
 <h3 id="boostdi-design-goals">Boost.DI design goals</h3>
 <ul>
 <li>Be as fast as possible (See <a href="overview/index.html#performance">Performance</a>)</li>
-<li>Compile as fast as possible (See <a href="overview/index.html#performance">Performance</a>)</li>
+<li>Compile as fast as possible (See <a href="overview/index.html#benchmarks">Benchmarks</a>)</li>
 <li>Give short and intuitive error messages (See <a href="overview/index.html#error-messages">Error messages</a>)</li>
 <li>Guarantee object creation at compile-time (See <a href="tutorial/index.html#1-basic-create-objects-tree">Create Objects Tree</a>)</li>
 <li>Be as non-intrusive as possible (See <a href="user_guide/index.html#injections">Injections</a>)</li>
@@ -393,5 +393,5 @@ but also can help you with...</p>
 
 <!--
 MkDocs version : 0.15.0
-Build Date UTC : 2016-02-21 16:18:40.213600
+Build Date UTC : 2016-02-21 17:42:53.396683
 -->
