--- a/overview/index.html
+++ b/overview/index.html
@@ -574,20 +574,24 @@ struct core::injector : TBindings... {
 <tr>
 <th>Library</th>
 <th>Bind Value</th>
+<th>ASM x86-64</th>
 </tr>
 </thead>
 <tbody>
 <tr>
 <td>Boost.DI</td>
 <td><img alt="CPP" src="https://raw.githubusercontent.com/boost-experimental/di/cpp14/benchmark/bind_value/di.cpp" /></td>
+<td><a href="https://raw.githubusercontent.com/boost-experimental/di/cpp14/benchmark/bind_value/di.cpp">8 instructions</a></td>
 </tr>
 <tr>
 <td><a href="https://bitbucket.org/cheez/dicpp/wiki/Home">dicpp</a></td>
 <td><img alt="CPP" src="https://raw.githubusercontent.com/boost-experimental/di/cpp14/benchmark/bind_value/dicpp.cpp" /></td>
+<td><a href="https://raw.githubusercontent.com/boost-experimental/di/cpp14/benchmark/bind_value/dicpp.cpp">50 instructions</a></td>
 </tr>
 <tr>
 <td><a href="https://github.com/google/fruit">Google.Fruit</a></td>
 <td><img alt="CPP" src="https://raw.githubusercontent.com/boost-experimental/di/cpp14/benchmark/bind_value/fruit.cpp" /></td>
+<td><a href="https://raw.githubusercontent.com/boost-experimental/di/cpp14/benchmark/bind_value/dicpp.cpp">82 instructions</a></td>
 </tr>
 </tbody>
 </table>
@@ -714,7 +718,7 @@ struct core::injector : TBindings... {
 <td>0ms</td>
 </tr>
 <tr>
-<td>Memory usage / sizeof(injector)</td>
+<td>Memory usage (stack/heap)</td>
 <td>0b</td>
 <td>0b</td>
 <td>0b</td>
@@ -793,15 +797,15 @@ struct core::injector : TBindings... {
 </tr>
 <tr>
 <td><a href="https://github.com/google/guice">Google.Guice</a></td>
-<td><img alt="CPP" src="https://raw.githubusercontent.com/boost-experimental/di/cpp14/benchmark/bind_interface/guice.cpp" /></td>
+<td><img alt="CPP" src="https://raw.githubusercontent.com/boost-experimental/di/cpp14/benchmark/bind_interface/guice.java" /></td>
 </tr>
 <tr>
 <td><a href="https://github.com/google/dagger">Dagger2</a></td>
-<td><img alt="CPP" src="https://raw.githubusercontent.com/boost-experimental/di/cpp14/benchmark/bind_interface/dagger2.cpp" /></td>
+<td><img alt="CPP" src="https://raw.githubusercontent.com/boost-experimental/di/cpp14/benchmark/bind_interface/dagger2.java" /></td>
 </tr>
 <tr>
 <td><a href="https://github.com/ninject/ninject">Ninject</a></td>
-<td><img alt="CPP" src="https://raw.githubusercontent.com/boost-experimental/di/cpp14/benchmark/bind_interface/Ninject.cpp" /></td>
+<td><img alt="CPP" src="https://raw.githubusercontent.com/boost-experimental/di/cpp14/benchmark/bind_interface/ninject.cs" /></td>
 </tr>
 </tbody>
 </table>
@@ -819,15 +823,15 @@ struct core::injector : TBindings... {
 </tr>
 <tr>
 <td><a href="https://github.com/google/guice">Google.Guice</a></td>
-<td><img alt="CPP" src="https://raw.githubusercontent.com/boost-experimental/di/cpp14/benchmark/bind_value/guice.cpp" /></td>
+<td><img alt="CPP" src="https://raw.githubusercontent.com/boost-experimental/di/cpp14/benchmark/bind_value/guice.java" /></td>
 </tr>
 <tr>
 <td><a href="https://github.com/google/dagger">Dagger2</a></td>
-<td><img alt="CPP" src="https://raw.githubusercontent.com/boost-experimental/di/cpp14/benchmark/bind_value/dagger2.cpp" /></td>
+<td><img alt="CPP" src="https://raw.githubusercontent.com/boost-experimental/di/cpp14/benchmark/bind_value/dagger2.java" /></td>
 </tr>
 <tr>
 <td><a href="https://github.com/ninject/ninject">Ninject</a></td>
-<td><img alt="CPP" src="https://raw.githubusercontent.com/boost-experimental/di/cpp14/benchmark/bind_value/Ninject.cpp" /></td>
+<td><img alt="CPP" src="https://raw.githubusercontent.com/boost-experimental/di/cpp14/benchmark/bind_value/ninject.cs" /></td>
 </tr>
 </tbody>
 </table>
@@ -845,15 +849,15 @@ struct core::injector : TBindings... {
 </tr>
 <tr>
 <td><a href="https://github.com/google/guice">Google.Guice</a></td>
-<td><img alt="CPP" src="https://raw.githubusercontent.com/boost-experimental/di/cpp14/benchmark/bind_error/guice.cpp" /></td>
+<td><img alt="CPP" src="https://raw.githubusercontent.com/boost-experimental/di/cpp14/benchmark/bind_error/guice.java" /></td>
 </tr>
 <tr>
 <td><a href="https://github.com/google/dagger">Dagger2</a></td>
-<td><img alt="CPP" src="https://raw.githubusercontent.com/boost-experimental/di/cpp14/benchmark/bind_error/dagger2.cpp" /></td>
+<td><img alt="CPP" src="https://raw.githubusercontent.com/boost-experimental/di/cpp14/benchmark/bind_error/dagger2.java" /></td>
 </tr>
 <tr>
 <td><a href="https://github.com/ninject/ninject">Ninject</a></td>
-<td><img alt="CPP" src="https://raw.githubusercontent.com/boost-experimental/di/cpp14/benchmark/bind_error/Ninject.cpp" /></td>
+<td><img alt="CPP" src="https://raw.githubusercontent.com/boost-experimental/di/cpp14/benchmark/bind_error/ninject.cs" /></td>
 </tr>
 </tbody>
 </table>
