--- a/overview/index.html
+++ b/overview/index.html
@@ -874,8 +874,8 @@ struct core::injector : TBindings... {
 </thead>
 <tbody>
 <tr>
-<td><a href="">Create Simple</a></td>
-<td>-O2 -s</td>
+<td><a href="https://raw.githubusercontent.com/boost-experimental/di/cpp14/benchmark/create_simple">Create Simple</a></td>
+<td>-O2</td>
 <td>0</td>
 <td>0</td>
 <td>0</td>
@@ -922,8 +922,8 @@ struct core::injector : TBindings... {
 </thead>
 <tbody>
 <tr>
-<td><a href="">Create Complex</a></td>
-<td>-O2 -s</td>
+<td><a href="https://raw.githubusercontent.com/boost-experimental/di/cpp14/benchmark/create_complex">Create Complex</a></td>
+<td>-O2</td>
 <td>0</td>
 <td>0</td>
 <td>0</td>
