--- a/overview/index.html
+++ b/overview/index.html
@@ -755,7 +755,7 @@ struct core::injector : TBindings... {
 <tr>
 <td>Language</td>
 <td>C++14</td>
-<td>Java 6</td>
+<td>Java</td>
 <td>Java</td>
 <td>C#</td>
 </tr>
