--- a/tutorial/index.html
+++ b/tutorial/index.html
@@ -863,8 +863,8 @@ di::injector&lt;app&gt; app_module(const bool&amp; use_gui_view) {
 <img alt="CPP" src="https://raw.githubusercontent.com/boost-experimental/di/cpp14/example/tutorial/basic_split_your_configuration_expose.cpp" /></p>
 <div class="warning">
 <h3><span class="fa fa-eye wy-text-neutral"></span>&nbsp; Note</h3>
-You can also expose named parameters using 'di::injector<BOOST_DI_EXPOSE((named = Rows) int)>'.
-Different variations of the same type have to be exposed explicitly using `di::injector<model&, std::unique_ptr<model>>`.
+You can also expose named parameters using 'di::injector&lt;BOOST_DI_EXPOSE((named = Rows) int)&gt;'.
+Different variations of the same type have to be exposed explicitly using `di::injector&lt;model&, std::unique_ptr&lt;model&gt;&gt;`.
 Expose uses type erasure and therefore it has small performance overhead!
 </div>
 
